# ocr-backup-melodia

./: pom.xml
libnative/: CMakeLists.txt
libnative/src/: ExporterMacro.h  Logger.cpp  Logger.h
libnative/src/audio/linux/pulse/: pulse.cpp  pulse.h
libnative/src/codec/opus/: opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h
project/: README.md  pom.xml
project/src/main/java/com/isthari/ocr/melodia/: ServerMelodia.java
project/src/main/java/com/isthari/ocr/melodia/api/audio/pulse/: AudioRecordCallback.java  PulseAudio.java  PulseAudioFactory.java
project/src/main/java/com/isthari/ocr/melodia/api/codec/opus/: MediaOpusDecoderLowLevel.java  MediaOpusEncoderLowLevel.java  MediaOpusFactory.java
project/src/main/java/com/isthari/ocr/melodia/audio/: AudioPacket.java  Encoder.java  ProgramEncoder.java  RingBuffer.java  RtpSender.java
project/src/main/java/com/isthari/ocr/melodia/codec/: MediaEncoder.java
project/src/main/java/com/isthari/ocr/melodia/codec/opus/: MediaOpusDecoderTest.java  MediaOpusEncoder.java
project/src/main/java/com/isthari/ocr/melodia/dao/: ChannelDao.java  DestinationDao.java  ProgramDao.java
project/src/main/java/com/isthari/ocr/melodia/data/: Channel.java  Destination.java  Program.java
project/src/main/resources/: application.yaml
